--- a/home.html
+++ b/home.html
@@ -17,7 +17,26 @@
   --shadow:0 12px 30px rgba(16,24,40,0.08);
   --radius:14px;
 }
-
+.section-title {
+  padding: 6px 12px;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #888;
+  background: #f0f0f0;
+  border-bottom: 1px solid #ddd;
+}
+.contact .dot.online {
+  width: 8px;
+  height: 8px;
+  background: #27c24c;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 4px;
+}
+.contact em {
+  color: #27c24c;
+  font-style: italic;
+}
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;}
 html,body{height:100%;}
 body{
@@ -200,9 +219,7 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 const SUPABASE_URL = 'https://dfzshvldanqfvfivjrqi.supabase.co'
 const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA'
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
-
 const storageProfileKey = 'hc_profile'
-
 const DRIVE_FILE_NAME = 'chat.json'
 
 const profile = JSON.parse(localStorage.getItem(storageProfileKey) || 'null')
@@ -213,13 +230,15 @@ const myName = profile.name
 const myAvatar = profile.avatar || `https://ui-avatars.com/api/?name=${encodeURIComponent(myName)}`
 let DRIVE_TOKEN = profile.token || null
 let DRIVE_FILE_ID = null
-let chatStore = {} 
+let chatStore = {}
+let online = {}
+let typingUsers = {}
+
 document.getElementById('myAvatar').src = myAvatar
 document.getElementById('myName').textContent = myName
 
 const contactsEl = document.getElementById('contacts')
 const searchEl = document.getElementById('search')
-const addBtn = document.getElementById('addBtn')
 const logoutBtn = document.getElementById('logout')
 const peerAvatarEl = document.getElementById('peerAvatar')
 const peerNameEl = document.getElementById('peerName')
@@ -230,96 +249,120 @@ const messageInput = document.getElementById('messageInput')
 const sendBtn = document.getElementById('sendBtn')
 const attachBtn = document.getElementById('attach')
 
-let online = {}
 let pcMap = {}
 let dcMap = {}
 let currentPeer = null
+let driveSaveTimer = null
+let typingTimer = null
 
-searchEl.addEventListener('input', ()=>renderContacts(searchEl.value.trim()))
-addBtn.addEventListener('click', ()=> {
-  const id = searchEl.value.trim()
-  if (!id || id === myId) return
-  const temp = { uuid:id, name:'Contact', avatar:'https://ui-avatars.com/api/?name=User' }
-  online[id] = temp
-  renderContacts()
-})
-logoutBtn.addEventListener('click', ()=>{
+searchEl.addEventListener('input',()=>renderContacts(searchEl.value.trim()))
+logoutBtn.addEventListener('click',()=>{
   localStorage.removeItem(storageProfileKey)
   location.reload()
 })
+sendBtn.addEventListener('click',sendMessage)
+messageInput.addEventListener('keydown',e=>{
+  if(e.key==='Enter') sendMessage()
+  else handleTyping()
+})
+attachBtn.addEventListener('click',selectImage)
 
 function renderContacts(filter=''){
   contactsEl.innerHTML = ''
-  const list = Object.values(online).filter(u=>u.uuid !== myId)
-  list.sort((a,b)=>{
-    const at = (chatStore[a.uuid]?.slice(-1)[0]?.ts)||0
-    const bt = (chatStore[b.uuid]?.slice(-1)[0]?.ts)||0
-    return bt - at
-  })
-  list.forEach(u=>{
-    if(filter && !u.name.toLowerCase().includes(filter.toLowerCase()) && !u.uuid.includes(filter)) return
-    const div = document.createElement('div')
-    div.className = 'contact'
-    if(currentPeer===u.uuid) div.classList.add('selected')
-    div.innerHTML = `
-      <img class="avatar" src="${u.avatar}">
-      <div class="meta">
-        <div class="name">${u.name}</div>
-        <div class="last">${(chatStore[u.uuid]?.slice(-1)[0]?.text) || 'No messages yet'}</div>
-      </div>`
-    div.addEventListener('click', ()=>openChatWith(u))
-    contactsEl.appendChild(div)
-  })
+
+  const chatUsers = Object.keys(chatStore)
+  if (chatUsers.length) {
+    const title = document.createElement('div')
+    title.className = 'section-title'
+    title.textContent = 'Your Chats'
+    contactsEl.appendChild(title)
+    chatUsers.forEach(uid=>{
+      const u = online[uid] || { uuid:uid, name:'Unknown', avatar:'https://ui-avatars.com/api/?name=?' }
+      const lastMsg = chatStore[uid]?.slice(-1)[0]
+      const div = document.createElement('div')
+      div.className = 'contact'
+      if(currentPeer===uid) div.classList.add('selected')
+      div.innerHTML = `
+        <img class="avatar" src="${u.avatar}">
+        <div class="meta">
+          <div class="name">${u.name}</div>
+          <div class="last">${typingUsers[uid] ? '<em>typing...</em>' : (lastMsg?.text || 'No messages')}</div>
+        </div>`
+      div.addEventListener('click',()=>openChatWith(u))
+      contactsEl.appendChild(div)
+    })
+  }
+
+  const onlineList = Object.values(online).filter(u=>u.uuid!==myId)
+  if (onlineList.length) {
+    const title = document.createElement('div')
+    title.className = 'section-title'
+    title.textContent = 'Online Users'
+    contactsEl.appendChild(title)
+    onlineList.forEach(u=>{
+      if(filter && !u.name.toLowerCase().includes(filter.toLowerCase())) return
+      const div = document.createElement('div')
+      div.className = 'contact'
+      if(currentPeer===u.uuid) div.classList.add('selected')
+      div.innerHTML = `
+        <img class="avatar" src="${u.avatar}">
+        <div class="meta">
+          <div class="name">${u.name} <span class="dot online"></span></div>
+          <div class="last">${typingUsers[u.uuid] ? '<em>typing...</em>' : (chatStore[u.uuid]?.slice(-1)[0]?.text || 'Online')}</div>
+        </div>`
+      div.addEventListener('click',()=>openChatWith(u))
+      contactsEl.appendChild(div)
+    })
+  }
 }
 
 function openChatWith(user){
   currentPeer = user.uuid
   peerNameEl.textContent = user.name
   peerAvatarEl.src = user.avatar
-  peerAvatarEl.style.display = 'block'
-  peerStatusEl.textContent = 'Online'
-  placeholderEl.style.display = 'none'
-  messagesEl.style.display = 'flex'
-  messagesEl.innerHTML = ''
-  if(!chatStore[currentPeer]) chatStore[currentPeer] = []
-  chatStore[currentPeer].forEach(m=> renderMessage(m.text, m.me, m.isImage, false))
+  peerStatusEl.textContent = typingUsers[user.uuid] ? 'Typing...' : 'Online'
+  placeholderEl.style.display='none'
+  messagesEl.style.display='flex'
+  messagesEl.innerHTML=''
+  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
+  chatStore[currentPeer].forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
   if(!pcMap[currentPeer]) createConnection(currentPeer)
   renderContacts()
   scrollToBottom()
 }
 
-function renderMessage(text, me, isImage, animate=true){
-  const d = document.createElement('div'); d.className = 'msg ' + (me?'me':'other')
+function renderMessage(text,me,isImage,animate=true){
+  const div=document.createElement('div')
+  div.className='msg '+(me?'me':'other')
   if(isImage){
-    const img = document.createElement('img')
-    img.src = text
-    d.appendChild(img)
-  } else d.textContent = text
-  if(animate) d.style.opacity=0
-  messagesEl.appendChild(d)
-  if(animate) requestAnimationFrame(()=>{ d.style.opacity=1 })
+    const img=document.createElement('img')
+    img.src=text
+    div.appendChild(img)
+  } else div.textContent=text
+  if(animate){ div.style.opacity=0; requestAnimationFrame(()=>div.style.opacity=1) }
+  messagesEl.appendChild(div)
   scrollToBottom()
 }
-
-function scrollToBottom(){ messagesEl.scrollTop = messagesEl.scrollHeight }
+function scrollToBottom(){ messagesEl.scrollTop=messagesEl.scrollHeight }
 
 async function startRealtime(){
   const pres = supabase.channel('public:presence')
-  pres.on('broadcast', { event:'user-presence' }, payload=>{
+  pres.on('broadcast',{event:'user-presence'},payload=>{
     const u = payload.payload
     if(!u?.uuid) return
     if(u.action==='join'||u.action==='update'){ online[u.uuid]=u; renderContacts() }
-    else if(u.action==='leave'){ delete online[u.uuid]; if(currentPeer===u.uuid) peerStatusEl.textContent='Offline'; renderContacts() }
+    else if(u.action==='leave'){ delete online[u.uuid]; renderContacts() }
   })
 
   const sig = supabase.channel('public:signaling')
-  sig.on('broadcast',{ event:'signal' }, async payload=>{
-    const msg = payload.payload
-    if(!msg || msg.to!==myId) return
+  sig.on('broadcast',{event:'signal'},async payload=>{
+    const msg=payload.payload
+    if(!msg||msg.to!==myId) return
     if(msg.type==='offer') await handleOffer(msg.from,msg.sdp)
     else if(msg.type==='answer') await handleAnswer(msg.from,msg.sdp)
     else if(msg.type==='candidate') await handleCandidate(msg.from,msg.candidate)
     else if(msg.type==='message') appendIncoming(msg.from,msg.data,msg.isImage)
+    else if(msg.type==='typing') showTyping(msg.from)
   })
 
   await pres.subscribe(); await sig.subscribe()
@@ -329,28 +372,26 @@ async function startRealtime(){
 
   await loadChatFromDrive()
 }
-
 function broadcastPresence(action){
   supabase.channel('public:presence').send({
-    type:'broadcast', event:'user-presence',
-    payload:{ uuid:myId, name:myName, avatar:myAvatar, action, ts:Date.now() }
+    type:'broadcast',event:'user-presence',
+    payload:{uuid:myId,name:myName,avatar:myAvatar,action,ts:Date.now()}
   })
 }
 
 function createConnection(peer){
-  const pc = new RTCPeerConnection()
-  const dc = pc.createDataChannel('chat')
-  dc.onmessage = ev=>appendIncoming(peer,ev.data,false)
-  dc.onopen = ()=>{ dcMap[peer]=dc }
-  pc.onicecandidate = e=>{ if(e.candidate) sendSignal(peer,{type:'candidate',candidate:e.candidate}) }
-  pc.ondatachannel = e=>{
+  const pc=new RTCPeerConnection()
+  const dc=pc.createDataChannel('chat')
+  dc.onmessage=e=>appendIncoming(peer,e.data,false)
+  dc.onopen=()=>{dcMap[peer]=dc}
+  pc.onicecandidate=e=>{if(e.candidate) sendSignal(peer,{type:'candidate',candidate:e.candidate})}
+  pc.ondatachannel=e=>{
     e.channel.onmessage=ev=>appendIncoming(peer,ev.data,false)
-    e.channel.onopen=()=>{ dcMap[peer]=e.channel }
+    e.channel.onopen=()=>{dcMap[peer]=e.channel}
   }
   pcMap[peer]=pc
   makeOffer(peer)
 }
-
 async function makeOffer(peer){
   const pc=pcMap[peer]
   const offer=await pc.createOffer()
@@ -362,9 +403,9 @@ async function handleOffer(from,sdp){
     const pc=new RTCPeerConnection()
     pc.ondatachannel=e=>{
       e.channel.onmessage=ev=>appendIncoming(from,ev.data,false)
-      e.channel.onopen=()=>{ dcMap[from]=e.channel }
+      e.channel.onopen=()=>{dcMap[from]=e.channel}
     }
-    pc.onicecandidate=e=>{ if(e.candidate) sendSignal(from,{type:'candidate',candidate:e.candidate}) }
+    pc.onicecandidate=e=>{if(e.candidate) sendSignal(from,{type:'candidate',candidate:e.candidate})}
     pcMap[from]=pc
   }
   const pc=pcMap[from]
@@ -373,25 +414,41 @@ async function handleOffer(from,sdp){
   await pc.setLocalDescription(answer)
   sendSignal(from,{type:'answer',sdp:answer})
 }
-async function handleAnswer(from,sdp){ await pcMap[from]?.setRemoteDescription(new RTCSessionDescription(sdp)) }
-async function handleCandidate(from,candidate){ await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate)) }
-function sendSignal(to,msg){ supabase.channel('public:signaling').send({ type:'broadcast', event:'signal', payload:{...msg,from:myId,to} }) }
+async function handleAnswer(from,sdp){await pcMap[from]?.setRemoteDescription(new RTCSessionDescription(sdp))}
+async function handleCandidate(from,c){await pcMap[from]?.addIceCandidate(new RTCIceCandidate(c))}
+function sendSignal(to,msg){
+  supabase.channel('public:signaling').send({type:'broadcast',event:'signal',payload:{...msg,from:myId,to}})
+}
+
+function handleTyping(){
+  if(!currentPeer) return
+  sendSignal(currentPeer,{type:'typing'})
+}
+function showTyping(from){
+  typingUsers[from]=true
+  if(currentPeer===from) peerStatusEl.textContent='Typing...'
+  renderContacts()
+  clearTimeout(typingUsers[from+'_timer'])
+  typingUsers[from+'_timer']=setTimeout(()=>{
+    delete typingUsers[from]
+    if(currentPeer===from) peerStatusEl.textContent='Online'
+    renderContacts()
+  },1500)
+}
 
 function appendIncoming(from,text,isImage){
   if(!chatStore[from]) chatStore[from]=[]
-  chatStore[from].push({text,me:false,isImage:!!isImage,ts:Date.now(),read:currentPeer===from})
+  chatStore[from].push({text,me:false,isImage:!!isImage,ts:Date.now()})
   if(currentPeer===from) renderMessage(text,false,!!isImage)
-  else flashContact(from)
   renderContacts()
   scheduleDriveSave()
 }
-
 function sendMessage(){
   if(!currentPeer) return
   const val=messageInput.value.trim()
   if(!val) return
   if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].push({text:val,me:true,isImage:false,ts:Date.now(),read:true})
+  chatStore[currentPeer].push({text:val,me:true,isImage:false,ts:Date.now()})
   renderMessage(val,true,false)
   if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(val)
   sendSignal(currentPeer,{type:'message',data:val,isImage:false})
@@ -399,69 +456,48 @@ function sendMessage(){
   scheduleDriveSave()
   renderContacts()
 }
-
-function sendImageAsMessage(dataUrl){
-  if(!currentPeer) return
-  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].push({text:dataUrl,me:true,isImage:true,ts:Date.now(),read:true})
-  renderMessage(dataUrl,true,true)
-  if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(dataUrl)
-  sendSignal(currentPeer,{type:'message',data:dataUrl,isImage:true})
-  scheduleDriveSave()
-  renderContacts()
-}
-
-attachBtn.addEventListener('click',()=>{
-  const input=document.createElement('input')
-  input.type='file'
-  input.accept='image/*'
-  input.onchange=e=>{
-    const f=e.target.files[0]
-    if(!f) return
+function selectImage(){
+  const i=document.createElement('input')
+  i.type='file'; i.accept='image/*'
+  i.onchange=e=>{
+    const f=e.target.files[0]; if(!f)return
     const r=new FileReader()
     r.onload=()=>sendImageAsMessage(r.result)
     r.readAsDataURL(f)
   }
-  input.click()
-})
-sendBtn.addEventListener('click',sendMessage)
-messageInput.addEventListener('keydown',e=>{ if(e.key==='Enter') sendMessage() })
-
-function flashContact(id){
-  const el=[...contactsEl.children].find(c=>c.textContent.includes(id))
-  if(el) el.animate([{transform:'scale(1)'},{transform:'scale(1.05)'},{transform:'scale(1)'}],{duration:300})
+  i.click()
+}
+function sendImageAsMessage(url){
+  if(!currentPeer) return
+  chatStore[currentPeer]=chatStore[currentPeer]||[]
+  chatStore[currentPeer].push({text:url,me:true,isImage:true,ts:Date.now()})
+  renderMessage(url,true,true)
+  if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(url)
+  sendSignal(currentPeer,{type:'message',data:url,isImage:true})
+  scheduleDriveSave()
 }
 
 async function loadChatFromDrive(){
   if(!DRIVE_TOKEN) return
   try{
-    const listRes=await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id,name)`,{
-      headers:{Authorization:'Bearer '+DRIVE_TOKEN}
-    })
-    const listData=await listRes.json()
-    DRIVE_FILE_ID=listData.files?.[0]?.id || null
+    const listRes=await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id)`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
+    const list=await listRes.json()
+    DRIVE_FILE_ID=list.files?.[0]?.id||null
     if(DRIVE_FILE_ID){
-      const fileRes=await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{
-        headers:{Authorization:'Bearer '+DRIVE_TOKEN}
-      })
-      if(fileRes.ok){
-        const data=await fileRes.json().catch(()=> ({}))
-        if(data && typeof data==='object') chatStore=data
-      }
+      const f=await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
+      const data=await f.json().catch(()=>({}))
+      if(typeof data==='object') chatStore=data
     } else {
       await updateDriveChat()
     }
-  }catch(e){ console.error('Drive load error',e) }
+  }catch(e){console.error('Drive load error',e)}
   renderContacts()
 }
-
-let driveSaveTimer=null
 function scheduleDriveSave(){
   if(!DRIVE_TOKEN) return
   if(driveSaveTimer) clearTimeout(driveSaveTimer)
   driveSaveTimer=setTimeout(()=>updateDriveChat(),1500)
 }
-
 async function updateDriveChat(){
   if(!DRIVE_TOKEN) return
   try{
@@ -469,19 +505,12 @@ async function updateDriveChat(){
     const form=new FormData()
     form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
     form.append('file',new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
-    const uploadUrl=DRIVE_FILE_ID
+    const url=DRIVE_FILE_ID
       ? `https://www.googleapis.com/upload/drive/v3/files/${DRIVE_FILE_ID}?uploadType=multipart`
       : 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart'
-    const res=await fetch(uploadUrl,{
-      method:DRIVE_FILE_ID?'PATCH':'POST',
-      headers:{Authorization:'Bearer '+DRIVE_TOKEN},
-      body:form
-    })
-    if(res.ok){
-      const j=await res.json()
-      DRIVE_FILE_ID=j.id||DRIVE_FILE_ID
-    }
-  }catch(e){ console.error('Drive save error',e) }
+    const res=await fetch(url,{method:DRIVE_FILE_ID?'PATCH':'POST',headers:{Authorization:'Bearer '+DRIVE_TOKEN},body:form})
+    if(res.ok){const j=await res.json();DRIVE_FILE_ID=j.id||DRIVE_FILE_ID}
+  }catch(e){console.error('Drive save error',e)}
 }
 
 startRealtime()
@@ -489,4 +518,5 @@ startRealtime()
 
 </body>
 </html>
+
 
