--- a/home.html
+++ b/home.html
@@ -17,26 +17,7 @@
   --shadow:0 12px 30px rgba(16,24,40,0.08);
   --radius:14px;
 }
-.section-title {
-  padding: 6px 12px;
-  font-size: 13px;
-  text-transform: uppercase;
-  color: #888;
-  background: #f0f0f0;
-  border-bottom: 1px solid #ddd;
-}
-.contact .dot.online {
-  width: 8px;
-  height: 8px;
-  background: #27c24c;
-  border-radius: 50%;
-  display: inline-block;
-  margin-left: 4px;
-}
-.contact em {
-  color: #27c24c;
-  font-style: italic;
-}
+
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;}
 html,body{height:100%;}
 body{
@@ -219,143 +200,152 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 const SUPABASE_URL = 'https://dfzshvldanqfvfivjrqi.supabase.co'
 const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRmenNodmxkYW5xZnZmaXZqcnFpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ4MDIxNTEsImV4cCI6MjA3MDM3ODE1MX0.wdms-6G9eDzRuk1YiCpdyvVS-5CRKCsrq9WWWIFl9HA'
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY)
-const storageProfileKey = 'hc_profile'
+const STORAGE_KEY = 'hc_profile'
 const DRIVE_FILE_NAME = 'chat.json'
 
-const profile = JSON.parse(localStorage.getItem(storageProfileKey) || 'null')
-if (!profile) { location.href = 'register.html'; throw new Error('no profile') }
+const profile = JSON.parse(localStorage.getItem(STORAGE_KEY) || 'null')
+if (!profile) { location.href = 'register.html'; throw new Error('No profile found') }
 
 const myId = profile.id
 const myName = profile.name
 const myAvatar = profile.avatar || `https://ui-avatars.com/api/?name=${encodeURIComponent(myName)}`
+const myEmail = profile.email || ''
 let DRIVE_TOKEN = profile.token || null
 let DRIVE_FILE_ID = null
-let chatStore = {}
-let online = {}
-let typingUsers = {}
 
-document.getElementById('myAvatar').src = myAvatar
-document.getElementById('myName').textContent = myName
+let chatStore = {} 
+let onlineUsers = {}
+let pcMap = {}
+let dcMap = {}
+let typingTimeouts = {}
+let currentPeer = null
 
+const tabs = {
+  yourChats: document.getElementById('chatsFragment'),
+  onlineUsers: document.getElementById('onlineFragment')
+}
+const tabButtons = {
+  yourChats: document.getElementById('tabChats'),
+  onlineUsers: document.getElementById('tabOnline')
+}
 const contactsEl = document.getElementById('contacts')
+const onlineEl = document.getElementById('onlineUsers')
 const searchEl = document.getElementById('search')
-const logoutBtn = document.getElementById('logout')
-const peerAvatarEl = document.getElementById('peerAvatar')
-const peerNameEl = document.getElementById('peerName')
-const peerStatusEl = document.getElementById('peerStatus')
-const placeholderEl = document.getElementById('placeholder')
-const messagesEl = document.getElementById('messages')
 const messageInput = document.getElementById('messageInput')
 const sendBtn = document.getElementById('sendBtn')
 const attachBtn = document.getElementById('attach')
+const peerNameEl = document.getElementById('peerName')
+const peerAvatarEl = document.getElementById('peerAvatar')
+const peerStatusEl = document.getElementById('peerStatus')
+const messagesEl = document.getElementById('messages')
+const placeholderEl = document.getElementById('placeholder')
 
-let pcMap = {}
-let dcMap = {}
-let currentPeer = null
-let driveSaveTimer = null
-let typingTimer = null
+tabButtons.yourChats.addEventListener('click', () => showTab('yourChats'))
+tabButtons.onlineUsers.addEventListener('click', () => showTab('onlineUsers'))
+function showTab(tab) {
+  for (const key in tabs) {
+    tabs[key].style.display = key === tab ? 'block' : 'none'
+    tabButtons[key].classList.toggle('active', key === tab)
+  }
+}
 
-searchEl.addEventListener('input',()=>renderContacts(searchEl.value.trim()))
-logoutBtn.addEventListener('click',()=>{
-  localStorage.removeItem(storageProfileKey)
-  location.reload()
-})
-sendBtn.addEventListener('click',sendMessage)
-messageInput.addEventListener('keydown',e=>{
-  if(e.key==='Enter') sendMessage()
-  else handleTyping()
-})
-attachBtn.addEventListener('click',selectImage)
-
-function renderContacts(filter=''){
+function renderContacts(filter='') {
   contactsEl.innerHTML = ''
+  const list = Object.values(chatStore)
+    .map((v, i) => Object.keys(chatStore)[i])
+    .map(uuid => ({ uuid, lastMsg: chatStore[uuid]?.slice(-1)[0] }))
+  list.sort((a,b)=>(b.lastMsg?.ts||0)-(a.lastMsg?.ts||0))
+  list.forEach(item=>{
+    const u = onlineUsers[item.uuid] || {uuid:item.uuid,name:item.uuid,avatar:'https://ui-avatars.com/api/?name=U'}
+    if(filter && !u.name.toLowerCase().includes(filter.toLowerCase())) return
+    const div = document.createElement('div')
+    div.className = 'contact'
+    div.innerHTML = `
+      <img class="avatar" src="${u.avatar}">
+      <div class="meta">
+        <div class="name">${u.name}</div>
+        <div class="last">${item.lastMsg?.text || 'No messages yet'}</div>
+      </div>
+    `
+    div.addEventListener('click', ()=>openChatWith(u))
+    contactsEl.appendChild(div)
+  })
+}
 
-  const chatUsers = Object.keys(chatStore)
-  if (chatUsers.length) {
-    const title = document.createElement('div')
-    title.className = 'section-title'
-    title.textContent = 'Your Chats'
-    contactsEl.appendChild(title)
-    chatUsers.forEach(uid=>{
-      const u = online[uid] || { uuid:uid, name:'Unknown', avatar:'https://ui-avatars.com/api/?name=?' }
-      const lastMsg = chatStore[uid]?.slice(-1)[0]
-      const div = document.createElement('div')
-      div.className = 'contact'
-      if(currentPeer===uid) div.classList.add('selected')
-      div.innerHTML = `
-        <img class="avatar" src="${u.avatar}">
-        <div class="meta">
-          <div class="name">${u.name}</div>
-          <div class="last">${typingUsers[uid] ? '<em>typing...</em>' : (lastMsg?.text || 'No messages')}</div>
-        </div>`
-      div.addEventListener('click',()=>openChatWith(u))
-      contactsEl.appendChild(div)
-    })
-  }
-
-  const onlineList = Object.values(online).filter(u=>u.uuid!==myId)
-  if (onlineList.length) {
-    const title = document.createElement('div')
-    title.className = 'section-title'
-    title.textContent = 'Online Users'
-    contactsEl.appendChild(title)
-    onlineList.forEach(u=>{
-      if(filter && !u.name.toLowerCase().includes(filter.toLowerCase())) return
-      const div = document.createElement('div')
-      div.className = 'contact'
-      if(currentPeer===u.uuid) div.classList.add('selected')
-      div.innerHTML = `
-        <img class="avatar" src="${u.avatar}">
-        <div class="meta">
-          <div class="name">${u.name} <span class="dot online"></span></div>
-          <div class="last">${typingUsers[u.uuid] ? '<em>typing...</em>' : (chatStore[u.uuid]?.slice(-1)[0]?.text || 'Online')}</div>
-        </div>`
-      div.addEventListener('click',()=>openChatWith(u))
-      contactsEl.appendChild(div)
-    })
-  }
+function renderOnlineUsers(filter=''){
+  onlineEl.innerHTML=''
+  const users = Object.values(onlineUsers).filter(u=>u.uuid!==myId)
+  users.forEach(u=>{
+    if(filter && !u.name.toLowerCase().includes(filter.toLowerCase())) return
+    const div = document.createElement('div')
+    div.className = 'online-user'
+    div.innerHTML = `
+      <div class="status-dot"></div>
+      <img class="avatar" src="${u.avatar}">
+      <div class="meta">
+        <div class="name">${u.name}</div>
+        <div class="status">${u.typing ? 'Typing...' : 'Online'}</div>
+      </div>
+    `
+    div.addEventListener('click',()=>openChatWith(u))
+    onlineEl.appendChild(div)
+  })
 }
 
 function openChatWith(user){
   currentPeer = user.uuid
   peerNameEl.textContent = user.name
   peerAvatarEl.src = user.avatar
-  peerStatusEl.textContent = typingUsers[user.uuid] ? 'Typing...' : 'Online'
-  placeholderEl.style.display='none'
-  messagesEl.style.display='flex'
+  peerStatusEl.textContent = user.typing ? 'Typing...' : 'Online'
+  placeholderEl.style.display = 'none'
+  messagesEl.style.display = 'flex'
   messagesEl.innerHTML=''
-  if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
+  if(!chatStore[currentPeer]) chatStore[currentPeer] = []
   chatStore[currentPeer].forEach(m=>renderMessage(m.text,m.me,m.isImage,false))
   if(!pcMap[currentPeer]) createConnection(currentPeer)
   renderContacts()
+  showTab('yourChats')
   scrollToBottom()
 }
 
 function renderMessage(text,me,isImage,animate=true){
-  const div=document.createElement('div')
-  div.className='msg '+(me?'me':'other')
+  const d=document.createElement('div')
+  d.className='msg '+(me?'me':'other')
   if(isImage){
     const img=document.createElement('img')
     img.src=text
-    div.appendChild(img)
-  } else div.textContent=text
-  if(animate){ div.style.opacity=0; requestAnimationFrame(()=>div.style.opacity=1) }
-  messagesEl.appendChild(div)
+    d.appendChild(img)
+  } else {
+    d.textContent=text
+  }
+  if(animate) d.style.opacity=0
+  messagesEl.appendChild(d)
+  if(animate) requestAnimationFrame(()=>{d.style.opacity=1})
   scrollToBottom()
 }
-function scrollToBottom(){ messagesEl.scrollTop=messagesEl.scrollHeight }
+function scrollToBottom(){ messagesEl.scrollTop = messagesEl.scrollHeight }
 
 async function startRealtime(){
-  const pres = supabase.channel('public:presence')
-  pres.on('broadcast',{event:'user-presence'},payload=>{
-    const u = payload.payload
+  const presence=supabase.channel('public:presence')
+  presence.on('broadcast',{event:'user-presence'},payload=>{
+    const u=payload.payload
     if(!u?.uuid) return
-    if(u.action==='join'||u.action==='update'){ online[u.uuid]=u; renderContacts() }
-    else if(u.action==='leave'){ delete online[u.uuid]; renderContacts() }
+    if(u.action==='join'||u.action==='update'){
+      onlineUsers[u.uuid]={...u}
+      renderOnlineUsers()
+    } else if(u.action==='leave'){
+      if(onlineUsers[u.uuid]){
+        onlineUsers[u.uuid].lastSeen=Date.now()
+        delete onlineUsers[u.uuid].typing
+      }
+      renderOnlineUsers()
+      if(currentPeer===u.uuid){
+        peerStatusEl.textContent=`Goes offline (${formatTime(onlineUsers[u.uuid]?.lastSeen)})`
+      }
+    }
   })
-
-  const sig = supabase.channel('public:signaling')
-  sig.on('broadcast',{event:'signal'},async payload=>{
+  const signaling=supabase.channel('public:signaling')
+  signaling.on('broadcast',{event:'signal'},async payload=>{
     const msg=payload.payload
     if(!msg||msg.to!==myId) return
     if(msg.type==='offer') await handleOffer(msg.from,msg.sdp)
@@ -364,18 +354,18 @@ async function startRealtime(){
     else if(msg.type==='message') appendIncoming(msg.from,msg.data,msg.isImage)
     else if(msg.type==='typing') showTyping(msg.from)
   })
-
-  await pres.subscribe(); await sig.subscribe()
+  await presence.subscribe()
+  await signaling.subscribe()
   broadcastPresence('join')
   setInterval(()=>broadcastPresence('update'),25000)
   window.addEventListener('beforeunload',()=>broadcastPresence('leave'))
-
   await loadChatFromDrive()
 }
 function broadcastPresence(action){
   supabase.channel('public:presence').send({
-    type:'broadcast',event:'user-presence',
-    payload:{uuid:myId,name:myName,avatar:myAvatar,action,ts:Date.now()}
+    type:'broadcast',
+    event:'user-presence',
+    payload:{uuid:myId,name:myName,avatar:myAvatar,email:myEmail,action,ts:Date.now()}
   })
 }
 
@@ -384,7 +374,7 @@ function createConnection(peer){
   const dc=pc.createDataChannel('chat')
   dc.onmessage=e=>appendIncoming(peer,e.data,false)
   dc.onopen=()=>{dcMap[peer]=dc}
-  pc.onicecandidate=e=>{if(e.candidate) sendSignal(peer,{type:'candidate',candidate:e.candidate})}
+  pc.onicecandidate=e=>{if(e.candidate)sendSignal(peer,{type:'candidate',candidate:e.candidate})}
   pc.ondatachannel=e=>{
     e.channel.onmessage=ev=>appendIncoming(peer,ev.data,false)
     e.channel.onopen=()=>{dcMap[peer]=e.channel}
@@ -405,7 +395,7 @@ async function handleOffer(from,sdp){
       e.channel.onmessage=ev=>appendIncoming(from,ev.data,false)
       e.channel.onopen=()=>{dcMap[from]=e.channel}
     }
-    pc.onicecandidate=e=>{if(e.candidate) sendSignal(from,{type:'candidate',candidate:e.candidate})}
+    pc.onicecandidate=e=>{if(e.candidate)sendSignal(from,{type:'candidate',candidate:e.candidate})}
     pcMap[from]=pc
   }
   const pc=pcMap[from]
@@ -415,30 +405,30 @@ async function handleOffer(from,sdp){
   sendSignal(from,{type:'answer',sdp:answer})
 }
 async function handleAnswer(from,sdp){await pcMap[from]?.setRemoteDescription(new RTCSessionDescription(sdp))}
-async function handleCandidate(from,c){await pcMap[from]?.addIceCandidate(new RTCIceCandidate(c))}
-function sendSignal(to,msg){
-  supabase.channel('public:signaling').send({type:'broadcast',event:'signal',payload:{...msg,from:myId,to}})
-}
+async function handleCandidate(from,candidate){await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate))}
+function sendSignal(to,msg){supabase.channel('public:signaling').send({type:'broadcast',event:'signal',payload:{...msg,from:myId,to}})}
 
-function handleTyping(){
+messageInput.addEventListener('input',()=>{
   if(!currentPeer) return
   sendSignal(currentPeer,{type:'typing'})
-}
-function showTyping(from){
-  typingUsers[from]=true
-  if(currentPeer===from) peerStatusEl.textContent='Typing...'
-  renderContacts()
-  clearTimeout(typingUsers[from+'_timer'])
-  typingUsers[from+'_timer']=setTimeout(()=>{
-    delete typingUsers[from]
-    if(currentPeer===from) peerStatusEl.textContent='Online'
-    renderContacts()
-  },1500)
+})
+function showTyping(uuid){
+  if(onlineUsers[uuid]){
+    onlineUsers[uuid].typing=true
+    renderOnlineUsers()
+    if(currentPeer===uuid) peerStatusEl.textContent='Typing...'
+    clearTimeout(typingTimeouts[uuid])
+    typingTimeouts[uuid]=setTimeout(()=>{
+      if(onlineUsers[uuid]) delete onlineUsers[uuid].typing
+      if(currentPeer===uuid) peerStatusEl.textContent='Online'
+      renderOnlineUsers()
+    },1500)
+  }
 }
 
 function appendIncoming(from,text,isImage){
   if(!chatStore[from]) chatStore[from]=[]
-  chatStore[from].push({text,me:false,isImage:!!isImage,ts:Date.now()})
+  chatStore[from].push({text,me:false,isImage:!!isImage,ts:Date.now(),read:currentPeer===from})
   if(currentPeer===from) renderMessage(text,false,!!isImage)
   renderContacts()
   scheduleDriveSave()
@@ -448,75 +438,90 @@ function sendMessage(){
   const val=messageInput.value.trim()
   if(!val) return
   if(!chatStore[currentPeer]) chatStore[currentPeer]=[]
-  chatStore[currentPeer].push({text:val,me:true,isImage:false,ts:Date.now()})
+  chatStore[currentPeer].push({text:val,me:true,isImage:false,ts:Date.now(),read:true})
   renderMessage(val,true,false)
   if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(val)
   sendSignal(currentPeer,{type:'message',data:val,isImage:false})
   messageInput.value=''
-  scheduleDriveSave()
   renderContacts()
+  scheduleDriveSave()
 }
-function selectImage(){
+sendBtn.addEventListener('click',sendMessage)
+messageInput.addEventListener('keydown',e=>{if(e.key==='Enter')sendMessage()})
+
+attachBtn.addEventListener('click',()=>{
   const i=document.createElement('input')
   i.type='file'; i.accept='image/*'
   i.onchange=e=>{
     const f=e.target.files[0]; if(!f)return
     const r=new FileReader()
-    r.onload=()=>sendImageAsMessage(r.result)
+    r.onload=()=>sendImage(r.result)
     r.readAsDataURL(f)
   }
   i.click()
-}
-function sendImageAsMessage(url){
-  if(!currentPeer) return
-  chatStore[currentPeer]=chatStore[currentPeer]||[]
-  chatStore[currentPeer].push({text:url,me:true,isImage:true,ts:Date.now()})
-  renderMessage(url,true,true)
-  if(dcMap[currentPeer]?.readyState==='open') dcMap[currentPeer].send(url)
-  sendSignal(currentPeer,{type:'message',data:url,isImage:true})
+})
+function sendImage(data){
+  if(!currentPeer)return
+  if(!chatStore[currentPeer])chatStore[currentPeer]=[]
+  chatStore[currentPeer].push({text:data,me:true,isImage:true,ts:Date.now(),read:true})
+  renderMessage(data,true,true)
+  if(dcMap[currentPeer]?.readyState==='open')dcMap[currentPeer].send(data)
+  sendSignal(currentPeer,{type:'message',data:data,isImage:true})
+  renderContacts()
   scheduleDriveSave()
 }
-
 async function loadChatFromDrive(){
   if(!DRIVE_TOKEN) return
   try{
-    const listRes=await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id)`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
-    const list=await listRes.json()
-    DRIVE_FILE_ID=list.files?.[0]?.id||null
+    const listRes=await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id,name)`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
+    const listData=await listRes.json()
+    DRIVE_FILE_ID=listData.files?.[0]?.id||null
     if(DRIVE_FILE_ID){
-      const f=await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
-      const data=await f.json().catch(()=>({}))
-      if(typeof data==='object') chatStore=data
-    } else {
-      await updateDriveChat()
-    }
+      const fileRes=await fetch(`https://www.googleapis.com/drive/v3/files/${DRIVE_FILE_ID}?alt=media`,{headers:{Authorization:'Bearer '+DRIVE_TOKEN}})
+      if(fileRes.ok){
+        const data=await fileRes.json().catch(()=>({}))
+        if(data && typeof data==='object') chatStore=data
+      }
+    } else await updateDriveChat()
   }catch(e){console.error('Drive load error',e)}
   renderContacts()
 }
+let driveSaveTimer=null
 function scheduleDriveSave(){
-  if(!DRIVE_TOKEN) return
-  if(driveSaveTimer) clearTimeout(driveSaveTimer)
+  if(!DRIVE_TOKEN)return
+  if(driveSaveTimer)clearTimeout(driveSaveTimer)
   driveSaveTimer=setTimeout(()=>updateDriveChat(),1500)
 }
 async function updateDriveChat(){
-  if(!DRIVE_TOKEN) return
+  if(!DRIVE_TOKEN)return
   try{
     const metadata={name:DRIVE_FILE_NAME,mimeType:'application/json'}
+    const dataToSave={chatStore,meta:{email:myEmail,name:myName,updated:Date.now()}}
     const form=new FormData()
     form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-    form.append('file',new Blob([JSON.stringify(chatStore)],{type:'application/json'}))
-    const url=DRIVE_FILE_ID
-      ? `https://www.googleapis.com/upload/drive/v3/files/${DRIVE_FILE_ID}?uploadType=multipart`
-      : 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart'
-    const res=await fetch(url,{method:DRIVE_FILE_ID?'PATCH':'POST',headers:{Authorization:'Bearer '+DRIVE_TOKEN},body:form})
-    if(res.ok){const j=await res.json();DRIVE_FILE_ID=j.id||DRIVE_FILE_ID}
+    form.append('file',new Blob([JSON.stringify(dataToSave)],{type:'application/json'}))
+    const uploadUrl=DRIVE_FILE_ID?`https://www.googleapis.com/upload/drive/v3/files/${DRIVE_FILE_ID}?uploadType=multipart`:'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart'
+    const res=await fetch(uploadUrl,{method:DRIVE_FILE_ID?'PATCH':'POST',headers:{Authorization:'Bearer '+DRIVE_TOKEN},body:form})
+    if(res.ok){
+      const j=await res.json()
+      DRIVE_FILE_ID=j.id||DRIVE_FILE_ID
+    }
   }catch(e){console.error('Drive save error',e)}
 }
 
+function formatTime(ts){
+  if(!ts)return ''
+  const d=new Date(ts)
+  return `${d.toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}`
+}
+
 startRealtime()
+showTab('yourChats')
 </script>
+
 
 </body>
 </html>
+
 
 
